plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.sonarqube" version "4.4.1.3373"
    id 'io.freefair.lombok' version '8.6'
}

group = 'com.masterproject'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

sourceSets {
    acceptance {
        java {
            srcDir file('src/acceptance/java')
        }
    }
}

configurations {
    acceptanceTestCompile.extendsFrom testCompile
    acceptanceTestRuntime.extendsFrom testRuntime
}

task acceptance(type: Test) {
    filter {
        includeTestsMatching "com.masterproject.musigame.acceptance.MusigameAcceptanceTest"
    }
    outputs.upToDateWhen { false }
    testClassesDirs = sourceSets.acceptance.output.classesDirs
    classpath = sourceSets.acceptance.runtimeClasspath
    systemProperty "project.root", "${projectDir}"
}

repositories {
    mavenCentral()
}

ext {
    firebaseVersion = '9.2.0'
    apacheCommonsVersion = '3.14.0'
    lombokVersion = '1.18.30'
    jqwikVersion = '1.8.4'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.springframework:spring-webflux"
    implementation "com.google.firebase:firebase-admin:${firebaseVersion}"
    implementation "org.apache.commons:commons-lang3:${apacheCommonsVersion}"


    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "net.jqwik:jqwik:${jqwikVersion}"

}

tasks.named('test') {
    useJUnitPlatform()
}


jacocoTestReport {
    getExecutionData().setFrom(fileTree(layout.buildDirectory.asFile.get()).include("/jacoco/*.exec"))
    reports {
        xml.required = true
        xml.outputLocation = layout.buildDirectory.file("jacoco.xml")

        html.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco")
    }
}

sonar {
    properties {
        property "sonar.projectKey", "bbmt0_Musigame"
        property "sonar.organization", "musigame"
        property "sonar.host.url", "https://sonarcloud.io"
        property 'sonar.coverage.jacoco.xmlReportPaths', layout.buildDirectory.file("jacoco.xml").get().asFile.path
    }
}